--- a/work1/index.html
+++ b/work1/index.html
@@ -4,5 +4,6 @@
         alert('陈智越的第一个网页程序')
     </script>
     <a href="javascript:alert('Hello');">test</a>
+<console.log('你好')>
 </body>
 </html>
