--- a/work5/index.html
+++ b/work5/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <meta charset="utf-8">
-    <title>陈循环语句程序</title>
+    <title>陈智越的循环语句程序</title>
     <body>
-        <p>9X9空表格</p>
+        <p>9X9的空表格</p>
         <div id='table1'></div>
         <p>倒九九乘法空表</p>
         <div id='table2'></div>
