--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <a href='work3/index.html'>work3 js基本语法</a><br>
         <a href='work4/index.1.html'>work4 js流程控制</a><br>   
         <a href='work5/index.html'>work5 js流程控制程序</a><br>
-        <a href='work6/index.html'>work6 阶乘法计算圆周率</a><br>     
+        <a href='work6/index.html'>work6 阶乘法计算圆周率</a><br>  
+        <a href='work7/index.html'>work7 冒泡排序和插入排序</a><br>
+        <a href='work7slide/index.html'>work7 冒泡排序/a><br>
         持续更新中.........
     </body>
 </html>
