--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href='work5/index.html'>work5 js流程控制程序</a><br>
         <a href='work6/index.html'>work6 阶乘法计算圆周率</a><br>  
         <a href='work7/index.html'>work7 冒泡排序和插入排序</a><br>
-        <a href='work7slide/index.html'>work7 冒泡排序/a><br>
+        <a href='work7slide/index.html'>work7 冒泡排序插入排序动画/a><br>
         持续更新中.........
     </body>
 </html>
