--- a/work13/index.html
+++ b/work13/index.html
@@ -7,7 +7,7 @@
         <div class="box">
             <div class="box-head">简介</div>
             <div class="box-body"></div>
-            <form id="form" action="/FormBuilder" method="post"></form>
+            <form id="form" action="/formBuilder" method="post"></form>
         </div>
     </div>
     <script src="FormBuilder.js"></script>
