--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="work15/index.html">work15 购物车</a><br>
         <a href="work16/index.html">work16 放大镜</a><br>
         <a href="work16/index1.html">work16-1 小球快冲</a><br>
-        持续更新中.........
+        <a href="work16/index2.html">work16-2 小球快冲</a><br>
+        To Be Continued...
     </body>
 </html>
