--- a/work16/index.html
+++ b/work16/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+<heda>
     <meta charset="UTF-8">
-    <title> 陈的放大镜</title>
+    <title>陈的放大镜</title>
     <link rel="stylesheet" href="index.css">
-</head>
-<body>
+</heda>
+
+<div>
     <div class="box" id="box">
         <div id="smallBox" class="small">
-            <img src="small.jpg">
-            <div id="mask" class="mask"></div>
+           <img src="small.jpg">
+           <div id="mask" class="mask"></div>
         </div>
         <div id="bigBox" class="big">
             <img id="bigImg" src="big.jpg">
