--- a/work19/index.html
+++ b/work19/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>陈的聊天室</title>
+    <title>陈的简易WebSocket聊天室</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    服务器:<input type="text" id="server" value="ws:139.9.81.203:8081"><br>
-    昵称:<input type="text" id="nickname" value="细w">
-    <button onclick="connect()" id="conn"></button>
-    <button onclick="disconnect()"id="disconn"></button><br>
-    发言:<input size="40" id="content"><button onclick="send()">发送</button>
+    服务器:<input type="text" id="server" value="ws://localhost:8081" ><br>
+    昵称:<input type="text" id="nickname" value="CL" >
+    <button onclick="connect()" id="conn">connect</button>
+    <button onclick="disconnect()" id="disconn">disconnect</button><br>
+    发言:<input size="40" id="content" ><button onclick="send()">send</button>
     <div class="scrollbox" id="board">
-    <div>a</div>
+        <div>a</div>
     </div>
 </body>
 <script src="index.js"></script>
