--- a/work18/index.html
+++ b/work18/index.html
@@ -7,8 +7,8 @@
 <body>
     <div>陈的AJAX无刷新提交评论</div>
     学号:<input type="text" value="07190508" id="sno"><br>
-    姓名:<input type="text" value="陈" id="name"><br>
-    评论:<input type="text" value="我识写AJAX啦，好劲啊。" id="content" size="30"><br>
+    姓名:<input type="text" value="陈智越" id="name"><br>
+    评论:<input type="text" value="我会写AJAX啦，非常棒。" id="content" size="30"><br>
     <input type="button" value="发表评论" onclick="send()"><br>
     <div id="result"></div>
 </body>
