--- a/work1/index.html
+++ b/work1/index.html
@@ -1,9 +1,7 @@
 <html>
 <body>
-    <script>
-        alert('陈智越的第一个网页程序')
-    </script>
-    <a href="javascript:alert('Hello');">test</a>
+    <a href="javascript:alert('Hello');"></a>
+    <img src="thumb-1920-1021239.jpg" alt="">
 <console.log('你好')>
 </body>
 </html>
